<resources>
    <string name="app_name">BraGuia</string>
    <string name="add_user" />
    <string name="hint_word">Palavra...</string>
    <string name="button_save">Guardar</string>
    <string name="empty_not_saved">Login falhou por estar vazio.</string>
    <string name="user"> Username </string>
    <string name="email"> Email</string>
    <string name="password">Password </string>
    <string name="login">Login</string>
    <string name="register">Registar</string>
    <string name="registar">Não tem conta registada? Registe-se já! </string>
    <string name="fazerLog">Já tem conta registada? Faça login</string>
    <string name="homescreen">Meter cenas aqui </string>
    <string name="registarB">Registar</string>
    <string name="last_name"> Apelido</string>
    <string name="first_name">Nome </string>
    <string name="voltar"> Voltar </string>
    <string name="trails"> Roteiros </string>
    <string name="pins"> Pontos Interesse </string>
    <string name="descricao">Bem-vindo ao BraGuia! Quer seja um local à procura de novos locais para explorar ou um visitante, esta aplicação tem tudo o que precisa para tirar o máximo partido da sua experiência em Braga. Desde locais históricos como a Sé de Braga a marcos modernos como a escadaria do Bom Jesus do Monte, nós temos tudo o que precisa. A nossa aplicação apresenta passeios a pé que o levam pelos bairros e jóias escondidas da cidade. Cada passeio é acompanhado por mapas detalhados, dicas internas e informações históricas, facilitando a navegação pela rica cultura e história da cidade. Com BraGuia, pode explorar Braga como um local e criar memórias inesquecíveis.</string>
    <string name="button_start">Vamos começar!</string>
    <string name="button_go">Vamos!</string>
    <string name="desc2"> Bem-vindo ao BraGuia! A aplicação onde encontra tudo o que precisa para aproveitar ao máximo a sua visita à cidade de Braga.</string>
    <string name="add_pin" />
    <string name="add_trail" />
    <string name="action_settings">Definições</string>
    <string name="first_fragment_label" />
    <string name="ver_perfil">Perfil</string>
    <string name="logout">Logout</string>
    <string name="descStor">Descobre as jóias escondidas de Braga com a nossa aplicação de guia virtual! Explore a rica história da cidade, a arquitectura deslumbrante e a cultura vibrante na palma da sua mão. Com recomendações personalizadas e dicas privilegiadas, irá experienciar o melhor de Braga como um local. Descarregue a aplicação agora e comece a sua aventura!</string>
    <string name="profile">O meu Perfil</string>
    <string name="profile_image">profile_image</string>
    <string name="contactos">Contacte-nos</string>
    <string name="historico">Histórico</string>
    <string name="contact_name">Customer Support</string>
    <string name="contact_phone">924567891</string>
    <string name="contact_url">http://braguiacustomersupport.com</string>
    <string name="contact_mail">braguia@support.com</string>

    <string name="emergency_name">Medical Emergency Service</string>
    <string name="emergency_phone">112</string>
    <string name="emergency_url">http://www.112.pt</string>
    <string name="emergency_mail">112@gmail.com</string>


    <string-array name="language_entries">
        <item>English</item>
        <item>Español</item>
        <item>Português</item>
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>es</item>
        <item>pt</item>
    </string-array>

</resources>