<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="363dp"
        android:layout_height="33dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/contact_name"/>

    <TextView
        android:id="@+id/contact_phone"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_phone"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/contact_url"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/contact_url"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/contact_mail"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/contact_mail"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/emergency_name"
        android:layout_width="363dp"
        android:layout_height="33dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/emergency_name"/>

    <TextView
        android:id="@+id/emergency_phone"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:text="@string/emergency_phone"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emergency_url"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/emergency_url"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/emergency_mail"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/emergency_mail"
        android:textSize="14sp" />

</LinearLayout>