<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="341dp"
        android:layout_height="661dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView

            android:layout_width="120dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/register_icon_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/user"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tLogin"
            android:layout_width="299dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tFirst"
            android:layout_width="299dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tLast"
            android:layout_width="299dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tEmail"
            android:layout_width="304dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tSenha"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:ems="14"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/tReg"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:text="@string/registarB"
            android:textColor="#ffffff" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>